navbar: fix vertical alignment

--- a/geniza/app/assets/stylesheets/application.scss
+++ b/geniza/app/assets/stylesheets/application.scss
@@ -72,6 +72,10 @@ h6 {
   height: 60px;
 }
 
+.navbar-nav > li > a {
+  padding-top: 20px;
+}
+
 // ------
 // Footer
 // ------
